--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Noval Tech navabar</title>
-
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 	 <link
       rel="stylesheet"
       href="https://unpkg.com/swiper/swiper-bundle.min.css"
@@ -97,12 +97,11 @@
 		</section>
 
 		<section id="Services">
-			<div class="item_service_container">
+			<div class="item_service_container desktop">
 				<h2><span>OUR</span> SERVICES</h2>
-				<div class="item_service normal">
+				<div class="item_service_desktop normal">
 					<div class="item_service-text">
-						<img src="./img/camera.png" alt="icon-1" 
-						<img src="./img/camera.png" alt="icon-1" class="service_text_img">
+						<img src="./img/camera.png" alt="icon-1" class="service_text_img desktop">
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 						tempor incididunt ut labore et dolore magna aliqua.</p>
 						<div class="service-link">
@@ -110,14 +109,13 @@
 							<a href="#">Contact</a>
 						</div>
 					</div>
-					<div class="service_img image_1">
+					<div class="service_img image_1 desktop">
 						<h3><abbr>CCTV</abbr> Cameras</h3>
 					</div>
 				</div>
-				<div class="item_service reverse">
+				<div class=" item_service_desktop reverse">
 					<div class="item_service-text reverse">
-						<img src="./img/elect.png" alt="icon-1" 
-						<img src="./img/camera.png" alt="icon-1" class="service_text_img">
+						<img src="./img/elect.png" alt="icon-1" class="service_text_img desktop">
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 						tempor incididunt ut labore et dolore magna aliqua.</p>
 						<div class="service-link">
@@ -125,14 +123,13 @@
 							<a href="#">Contact</a>
 						</div>
 					</div>
-					<div class="service_img image_2">
+					<div class="service_img image_2 desktop">
 						<h3>Electric Perimeter Fencing </h3>
 					</div>
 				</div>
-				<div class="item_service normal">
+				<div class="item_service_desktop normal">
 					<div class="item_service-text">
-						<img src="./img/car-track.png" alt="icon-1" 
-						<img src="./img/camera.png" alt="icon-1" class="service_text_img">
+						<img src="./img/car-track.png" alt="icon-1" class="service_text_img desktop">
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 						tempor incididunt ut labore et dolore magna aliqua.</p>
 						<div class="service-link">
@@ -140,13 +137,13 @@
 							<a href="#">Contact</a>
 						</div>
 					</div>
-					<div class="service_img image_3">
+					<div class="service_img image_3 desktop">
 						<h3>Vehicle Tracking</h3>
 					</div>
 				</div>
-				<div class="item_service reverse">
+				<div class="item_service_desktop reverse">
 					<div class="item_service-text reverse">
-						<img src="./img/camera.png" alt="icon-1" class="service_text_img">
+						<img src="./img/camera.png" alt="icon-1" class="service_text_img desktop">
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 						tempor incididunt ut labore et dolore magna aliqua.</p>
 						<div class="service-link">
@@ -154,11 +151,76 @@
 							<a href="#">Contact</a>
 						</div>
 					</div>
-					<div class="service_img image_4">
+					<div class="service_img image_4 desktop">
 						<h3>Gate Automation</h3>
 					</div>
 				</div>
 			</div>
+			<!-- mobile services -->
+
+			<div class="item_service_container mobile">
+				<h2><span>OUR</span> SERVICES</h2>
+				<div class="item_service mobile">
+					<div class="item_mb_wrap">
+						<div class="mobile_service_img_wrap">
+							<img src="./img/camera.png" alt="icon-1" class="service_text_img mobile">
+							<div class="service_img image_1 mb">
+								<h3><abbr>CCTV</abbr> Cameras</h3>
+							</div>
+						</div>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua.</p>
+						<div class="service-link mb">
+							<a href="#">learn more on Electric fencing</a>
+							<a href="#">Contact</a>
+						</div>
+					</div>
+					<div class="item_mb_wrap">
+						<div class="mobile_service_img_wrap">
+							<img src="./img/camera.png" alt="icon-1" class="service_text_img mobile">
+							<div class="service_img image_1 mb">
+								<h3><abbr>CCTV</abbr> Cameras</h3>
+							</div>
+						</div>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua.</p>
+						<div class="service-link mb">
+							<a href="#">learn more on Electric fencing</a>
+							<a href="#">Contact</a>
+						</div>
+					</div>
+					<div class="item_mb_wrap">
+						<div class="mobile_service_img_wrap">
+							<img src="./img/camera.png" alt="icon-1" class="service_text_img mobile">
+							<div class="service_img image_1 mb">
+								<h3><abbr>CCTV</abbr> Cameras</h3>
+							</div>
+						</div>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua.</p>
+						<div class="service-link mb">
+							<a href="#">learn more on Electric fencing</a>
+							<a href="#">Contact</a>
+						</div>
+					</div>
+					<div class="item_mb_wrap">
+						<div class="mobile_service_img_wrap">
+							<img src="./img/camera.png" alt="icon-1" class="service_text_img mobile">
+							<div class="service_img image_1 mb">
+								<h3><abbr>CCTV</abbr> Cameras</h3>
+							</div>
+						</div>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua.</p>
+						<div class="service-link mb">
+							<a href="#">learn more on Electric fencing</a>
+							<a href="#">Contact</a>
+						</div>
+					</div>
+					
+				</div>
+			</div>
+
 		</section>
 		<section>
 			<div class="accordion_container">
@@ -264,23 +326,44 @@
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 					consequat. Duis aute irure dolor i
+			</div>
+			<div class="swiper-slide  testimonial_card">
+					Vem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor i
 			</div>        
       	</div>
       <div class="swiper-pagination"></div>
     </div>
 
     <!--  -->
-    <div>
+    <div class="mobile-testimonial">
     	<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
 			<div class="carousel-inner">
 				<div class="carousel-item active">
-				 	<img src="..." class="d-block w-100" alt="...">
+					<div class=" testimonial_card_mb">
+							Vem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+							consequat. Duis aute irure dolor i
+					</div>
 				</div>
 				<div class="carousel-item">
-				 	<img src="..." class="d-block w-100" alt="...">
+				 	<div class="  testimonial_card_mb">
+							Vem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+							consequat. Duis aute irure dolor i
+					</div>
 				</div>
 				<div class="carousel-item">
-				 	<img src="..." class="d-block w-100" alt="...">
+				 	<div class=" testimonial_card_mb">
+							Vem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+							consequat. Duis aute irure dolor i
+					</div>
 				</div>
 			</div>
 			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -343,6 +426,9 @@
 	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+	<!-- BOOTSTRAP -->
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 	    <!-- Swiper JS -->
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
